# takumi

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/takumi/: __init__.py  main.py
src/takumi/agents/: __init__.py  base.py  roles.py
src/takumi/cli/: app.py
src/takumi/config/: settings.py
src/takumi/contexts/: __init__.py
src/takumi/contexts/orchestration/: __init__.py  workflow.py
src/takumi/contexts/product_owner/: agent.py  models.py
src/takumi/contexts/team/: __init__.py  agent_config.py  prompt_loader.py  prompt_template.py  roles.py
src/takumi/contexts/team/prompts/: architect.md  backend.md  frontend.md  qa.md
src/takumi/graph/: state.py  workflow.py
src/takumi/interfaces/: __init__.py
src/takumi/interfaces/cli/: __init__.py
src/takumi/llm/: factory.py
src/takumi/shared/: __init__.py
src/takumi/shared/config/: __init__.py  settings.py
src/takumi/shared/llm/: __init__.py  factory.py
src/takumi/shared/presentation/: __init__.py
src/takumi/shared/presentation/cli/: __init__.py  app.py
src/takumi/shared/tools/: __init__.py
tests/: __init__.py  test_prompts.py  test_settings.py
